# time-my-talk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: sample_script.txt
src/time_my_talk/: __init__.py
src/time_my_talk/cli/: main.py
src/time_my_talk/core/: __init__.py  pace.py  script.py  tracker.py  types.py
src/time_my_talk/speech/: __init__.py  audio.py  recognizer.py
tests/: test_pace.py  test_script.py  test_tracker.py
