[project]
name = "time-my-talk"
version = "0.1.0"
description = "A presentation timing tool with speech recognition to help practice talk delivery"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Richard Adams" }
]
dependencies = [
    "vosk==0.3.44",  # Pinned: 0.3.44 is latest with macOS ARM support
    "pyaudio>=0.2.14",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
time-my-talk = "time_my_talk.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
